add_executable(GridPietGenerator GridPietGenerator.cpp pietblock.hpp pietboard.hpp pietinterpreter.hpp pietjoint.hpp pietpath.hpp pietutil.hpp arg.hpp)
add_executable(GridPietInterpreter GridPietInterpreter.cpp pietblock.hpp pietboard.hpp pietinterpreter.hpp pietjoint.hpp pietpath.hpp pietutil.hpp arg.hpp)
add_executable(testArg testArg.cpp arg.hpp)
